<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewHRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/changepw"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35dp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/search_layout"
            android:backgroundTint="@color/grey6"
            android:ems="8"
            android:hint="@string/enter_current_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/pinkLight"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_layout"
            android:backgroundTint="@color/grey6"
            android:ems="8"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/orangeLight2"
            android:textStyle="italic" />
        <EditText
            android:id="@+id/editextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_layout"
            android:backgroundTint="@color/grey6"
            android:ems="8"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/orangeLight2"
            android:textStyle="italic" />

        <Button
            android:id="@+id/buttonChangepw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/search_btn"
            android:backgroundTint="@color/colorAccent"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/changepw"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>