<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semi"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edittextQuest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_assign_layout"
                    android:hint="@string/enter_quest"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/pinkRose1"
                    android:inputType="text" />
            </LinearLayout>


            <EditText
                android:id="@+id/edittextA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_assign_layout"
                android:hint="@string/enter_ans"
                android:padding="5dp"
                android:textColor="@color/pinkRose1"
                android:inputType="text"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/select_type_left"
                    android:backgroundTint="@color/grey6"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_refresh"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/pinkRose"
                    android:minHeight="48dp"/>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/select_type_right"
                    android:backgroundTint="@color/bluegreen"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:minHeight="48dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>